--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <header class="header">
     <div class="header-brand">
-      <div class="logo"><img src="css/images/csc-logo.png" alt="CSC Logo"></div>
+      <div class="header-logo">
+    <img src="css/images/fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
       <div>
         <div class="site-title">Fateh Digital Seva Kendra</div>
         <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
