--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <p class="small">Message or call for quick assistance.</p>
 
       <div style="margin-top:12px"><strong>WhatsApp / Phone:</strong> <a href="https://wa.me/919780010087">+91 97800 10087</a></div>
-      <div style="margin-top:6px"><strong>Address:</strong> Village Ghal Kalan, near Baba Balmik Mandir, Moga, Punjab 142048</div>
+      <div style="margin-top:6px"><strong>Address:</strong> Village Ghal Kalan, Moga, Punjab 142048</div>
       <div style="margin-top:8px"><a class="btn-loc" href="https://www.google.com/maps/search/?api=1&query=Ghal+Kalan+Punjab+142048+India" target="_blank">Open Location in Maps</a></div>
     </section>
 
