--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="header-brand">
       <div class="header-logo">
-    <img src="css/images/fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
+    <img src="fateh-logo.png" alt="Fateh Digital Logo" class="site-logo">
       <div>
         <div class="site-title">Fateh Digital Seva Kendra</div>
         <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
