--- a/services.html
+++ b/services.html
@@ -34,7 +34,9 @@
 <body>
 
   <header class="header">
-    <div class="header-logo"><img src="css/images/fateh-logo.png" alt="Fateh logo"></div>
+    <div class="header-logo">
+    <img src="fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
+    </div>
     <div>
       <div class="site-title">Fateh Digital Seva Kendra</div>
       <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
