--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,17 @@
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Contact - Fateh Digital Seva Kendra</title><link rel="stylesheet" href="css/styles.css"></head>
 <body class="page-enter" id="body">
 
-  <header class="header">
-    <div class="header-brand">
-      <div class="logo"><img src="css/images/csc-logo.png" alt="CSC Logo"></div>
-      <div><div class="site-title">Fateh Digital Seva Kendra</div><div class="header-sub">Contact</div></div>
+  
+<header class="header">
+    <div class="header-logo">
+        <img src="fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
     </div>
-  </header>
 
+    <div>
+        <div class="site-title">Fateh Digital Seva Kendra</div>
+        <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
+    </div>
+</header>
   <main class="container">
     <div style="margin-bottom:14px" class="grid-nav">
       <a class="nav-circle" href="index.html">🏠 Home</a>
