--- a/about.html
+++ b/about.html
@@ -4,11 +4,15 @@
 <body class="page-enter" id="body">
 
   <header class="header">
-    <div class="header-brand">
-      <div class="logo"><img src="css/images/csc-logo.png" alt="CSC Logo"></div>
-      <div><div class="site-title">Fateh Digital Seva Kendra</div><div class="header-sub">About CSC</div></div>
+    <div class="header-logo">
+        <img src="fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
     </div>
-  </header>
+
+    <div>
+        <div class="site-title">Fateh Digital Seva Kendra</div>
+        <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
+    </div>
+</header>
 
   <main class="container">
     <div style="margin-bottom:14px" class="grid-nav">
