--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           <div class="service-price"><span class="price-badge">₹250</span></div>
         </div>
         <div class="service-card">
-          <div class="service-title">Aadhaar Print</div>
+          <div class="service-title">Aadhaar Print+Lamination</div>
           <div class="service-desc">Printing & minor updates</div>
-          <div class="service-price"><span class="price-badge">₹50</span></div>
+          <div class="service-price"><span class="price-badge">₹80</span></div>
         </div>
         <div class="service-card">
           <div class="service-title">Resume / CV</div>
@@ -102,7 +102,7 @@ window.addEventListener('DOMContentLoaded', ()=>{
 });
 
 /* WhatsApp for latest bharti: prefilled message */
-const phone = '919780010087'; // change if needed
+const phone = '9780010087'; // change if needed
 const bhartiText = encodeURIComponent('I want to apply - SSC GD Constable Recruitment 2026');
 const applyUrl = `https://wa.me/${phone}?text=${bhartiText}`;
 document.getElementById('noticeCTA').href = applyUrl;
