--- a/services.html
+++ b/services.html
@@ -33,21 +33,40 @@
 </head>
 <body>
 
-  <header class="header">
-    <div class="header-logo">
+  
+    <header class="header">
+  <div class="header-logo">
     <img src="fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
-    </div>
-    <div>
-      <div class="site-title">Fateh Digital Seva Kendra</div>
-      <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
-    </div>
-    <div style="margin-left:auto;display:flex;gap:6px;align-items:center">
-      <a href="index.html" style="text-decoration:none;color:#0b72d6;font-weight:700">EN</a>
+  </div>
 
-    </div>
-  </header>
+  <div>
+    <div class="site-title">Fateh Digital Seva Kendra</div>
+    <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
+  </div>
 
-  <main class="container">
+  <div style="margin-left:auto;display:flex;gap:6px;align-items:center">
+    <a href="index.html" style="text-decoration:none;color:#0b72d6;font-weight:700">EN</a>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="intro">
+    <div class="left">
+      <h1>Our Services & Prices</h1>
+      <p class="small">Tap any service card to message on WhatsApp and order.</p>
+
+      <div class="cta">
+        <a class="btn" href="services.html">See Services</a>
+        <a class="btn" href="contact.html">Contact Us</a>
+      </div>
+    </div>
+
+    <div class="small-card" style="width:220px;text-align:center">
+      <img src="css/images/csc-logo.png" alt="CSC" style="width:100px;height:auto">
+      <div class="small" style="margin-top:10px">Government Services Partner</div>
+    </div>
+  </div>
+</section>
 
     <nav class="nav-grid" aria-label="Main navigation">
       <a class="nav-circle" href="index.html">🏠 Home</a>
